--- a/pt/bibliografia.bib
+++ b/pt/bibliografia.bib
@@ -29,6 +29,13 @@ and Paleczny, Mike},
  (CIDR)},
  pages = {223--234}
 }
+@misc{BashoBench2013,
+ author = {BashoBench},
+ title = {{Basho Bench}},
+ note = "[\'Ultimo Acesso em 01/02/2013.]",
+ howpublished = {\url{http://docs.basho.com/riak/latest/cookbooks/Benchmarking/}},
+ year = {2013},
+}
 @inproceedings{Beyer2011,
  title = {{Testing the Suitability of Cassandra for Cloud Computing Environments Consistency, Availability and Partition Tolerance}},
  author = {Beyer, Felix and Koschel, Arne and Schulz, Christian and Sch\"{a}fer, Michael and Astrova, Irina and Reich, Alexander and Grivas, Stella Gatziu and Schaaf, Marc},
@@ -115,7 +122,8 @@ Sivasubramanian, Swaminathan and Vosshall, Peter and Vogels, Werner},
  publisher = {ACM},
  keywords = {performance, reliability, scalability},
 } 
-@misc{ESNet2012,
+@misc{ESnet2012,
+ author = {ESnet},
  title = {{Host Tuning}},
  note = "[\'Ultimo Acesso em 01/02/2013.]",
  howpublished = {\url{http://fasterdata.es.net/host-tuning/background/}},
@@ -138,6 +146,13 @@ and Anderson, Thomas},
  keywords = {Paxos, consistency, distributed systems, distributed transactions,
 fault tolerance, scalability, storage},
 } 
+@misc{Grid50002013,
+ author = {Grid5000},
+ title = {{Grid'5000}},
+ note = "[\'Ultimo Acesso em 01/02/2013.]",
+ howpublished = {\url{http://www.grid5000.fr/}},
+ year = {2013},
+}
 @book{Jain1991,
  title={The Art Of Computer Systems Performance Analysis},
  author={Jain, Raj},
@@ -181,6 +196,13 @@ storage with COPS},
  acmid = {2043593},
  keywords = {ALPS systems, causal + consistency, key-value storage, read
 transactions, scalable wide-area replication},
+}
+@misc{PingER2013,
+ author = {PingER},
+ title = {{Ping End-to-end Reporting}},
+ howpublished = {\url{http://www-iepm.slac.stanford.edu/pinger}},
+ note = "[\'Ultimo Acesso em 01/02/2013.]",
+ year = {2013}
 } 
 @misc{Pujol2012,
  author = {Pujol, Josep M.},
@@ -188,6 +210,13 @@ transactions, scalable wide-area replication},
  howpublished = {\url{http://3scale.github.com/2012/07/25/fun-with-redis-replication/}},
  note = "[\'Ultimo Acesso em 01/02/2013.]",
  year = {2012}
+}
+@misc{Riak2013,
+ author = {Riak},
+ title = {{Riak}},
+ howpublished = {\url{http://wiki.basho.com/Riak.html}},
+ note = "[\'Ultimo Acesso em 01/02/2013.]",
+ year = {2013}
 }
 @inproceedings{Sovran2011,
  author = {Sovran, Yair and Power, Russell and Aguilera, Marcos K. and Li,
