Use JISA formatting

--- a/en/bmc_article.bib
+++ b/en/bmc_article.bib
@@ -18,15 +18,11 @@ and Paleczny, Mike},
  keywords = {key-value store, memcached, workload analysis, workload modeling},
 } 
 @inproceedings{Baker2011,
- title = {Megastore: Providing Scalable, Highly Available Storage for Interactive
- Services},
- author  = {Jason Baker and Chris Bond and James C. Corbett and JJ Furman and
- Andrey Khorlin and James Larson and Jean-Michel Leon and Yawei Li and Alexander
- Lloyd and Vadim Yushprakh},
+ title = {Megastore: Providing Scalable, Highly Available Storage for Interactive Services},
+ author  = {Jason Baker and Chris Bond and James C. Corbett and JJ Furman and Andrey Khorlin and James Larson and Jean-Michel Leon and Yawei Li and Alexander Lloyd and Vadim Yushprakh},
  year  = 2011,
- URL = {http://www.cidrdb.org/cidr2011/Papers/CIDR11_Paper32.pdf},
- booktitle = {Proc. Conference on Innovative Data system Research
- (CIDR)},
+ URL = {http://www.cidrdb.org/cidr2011/Papers/CIDR11\_Paper32.pdf},
+ booktitle = {Proc. Conference on Innovative Data system Research (CIDR)},
  pages = {223--234}
 }
 @misc{BashoBench2013,
