--- a/en/bmc_article.bib
+++ b/en/bmc_article.bib
@@ -260,3 +260,17 @@ systems, key-value store, parallel snapshot isolation, transactions},
  acmid = {1435432},
  publisher = {ACM},
 } 
+@misc{DeDiana2013a,
+ author = {De Diana, Mauricio},
+ title = {{Github - mdediana/riak\_kv}},
+ howpublished = {\url{https://github.com/mdediana/riak_kv}},
+ note = "[\'Ultimo Acesso em 01/02/2013.]",
+ year = {2013}
+}
+@misc{DeDiana2013b,
+ author = {De Diana, Mauricio},
+ title = {{Github - mdediana/riak\_core}},
+ howpublished = {\url{https://github.com/mdediana/riak_core}},
+ note = "[\'Ultimo Acesso em 01/02/2013.]",
+ year = {2013}
+}
