Revised abstract and introduction

--- a/en/bmc_article.bib
+++ b/en/bmc_article.bib
@@ -274,3 +274,21 @@ systems, key-value store, parallel snapshot isolation, transactions},
  note = "[\'Ultimo Acesso em 01/02/2013.]",
  year = {2013}
 }
+@article{Herlihy1990,
+ author = {Herlihy, Maurice P. and Wing, Jeannette M.},
+ title = {Linearizability: A Correctness Condition for Concurrent Objects},
+ journal = {ACM Trans. Program. Lang. Syst.},
+ issue_date = {July 1990},
+ volume = {12},
+ number = {3},
+ month = jul,
+ year = {1990},
+ issn = {0164-0925},
+ pages = {463--492},
+ numpages = {30},
+ url = {http://doi.acm.org/10.1145/78969.78972},
+ doi = {10.1145/78969.78972},
+ acmid = {78972},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
