--- a/en/bmc_article.tex
+++ b/en/bmc_article.tex
@@ -185,19 +185,22 @@ in Geo-replicated Systems}
 
 \begin{abstract} % abstract
 Large-scale web systems use data replication among data centers to achieve high
-levels of performance and availability. By analysing consistency models, developers may understand the trade-offs between
-consistency, performance and availability among replicas. However,
-quantitative approaches are necessary for a better understanding of particular
-situations.
-
-This work experimentally compared the performance of a storage system using two
-different consistency models. Eventual consistency is a more relaxed consistency
+levels of performance and availability, trading off these attributes against
+consistency.  Consistency models define the consistency guarantees that a system
+provides and its trade-offs.  Eventual consistency is a more relaxed consistency
 model, widely deployed in large-scale systems. By its turn, the less popular
-per-record timeline consistency strikes a better balance when requirements over consistency
-are more restrictive. The results show that, for some specific workloads and
-network conditions, the system exhibits similar performance for both
-consistency models. This comparative is helpful for development
-cost estimates and capacity planning of large-scale systems.
+per-record timeline consistency strikes a better balance when requirements over
+consistency are more restrictive. However, to be able to make a decision,
+developers need to understand its performance penalties and the situations when
+they apply. 
+
+Here we show that under certain workloads and network conditions, a storage
+system exhibits similar performance for both consistency models. The
+experimental results confirm that a system using per-object timeline consistency
+and exhibiting high data locality and read/write ratios suffer a low performance
+hit compared to the same system using eventual consistency. This comparative
+helps developers and system administrators on cost estimates and capacity
+planning of large-scale systems.
 %\parttitle{First part title} %if any
 %Text for this section.
 
@@ -258,66 +261,75 @@ cost estimates and capacity planning of large-scale systems.
 
 \section{Introduction}
 
-Large-scale web systems continuously serve hundreds of thousands of users by
-replicating data across thousands of servers. Those servers are spread over
-multiple data centers located in different geographical locations, linked by
-wide area networks (WANs). However, geo-replication poses a challenge to
-consistency among replicas, mainly due to network latencies and
-node / network failures.
+To continuously serve users spread around the globe with low response times,
+large-scale web systems replicate data across several servers, which servers are
+spread over multiple data centers located in different geographical locations,
+linked by wide area networks (WANs). Such structure poses challenges to
+maintaining the consistency among the replicas, mainly due to network latencies
+and node / network failures.
 
-Developers and administrators of such systems seek a balance between
-consistency, performance and availability. There are several consistency models
-in literature, each of them defining a different set of conditions, guarantees
-and trade-offs. A common decision in large-scale systems is the use of more
-relaxed consistency models to achieve low latency and high availability.
-However, more relaxed consistency models allow inconsistencies to
-happen.
+Developers and administrators of such systems need to seek a balance between
+consistency, performance and availability. Several consistency models have been
+described in the literature, each of them defining a different set of
+conditions, guarantees and trade-offs. A common decision in large-scale systems
+is the use of more relaxed consistency models to achieve low latency and high
+availability.  However, inconsistencies are more likely to happen with more
+relaxed consistency models.
 
-Eventual consistency is a more relaxed consistency model which became popular
-after the publication of the Dynamo paper \cite{DeCandia2007}. Eventual
-consistency guarantees that once updates cease, all replicas will converge to the same value at
-some moment in the future. As long as updates are occurring, replicas may be
-inconsistent and clients may read stale or divergent values depending on which
-replica processes a given request. From that comes the need for the application to implement conflict resolution
-mechanisms and compensation actions to handle the results of actions taken based
-on inconsistent state. The added complexity negatively affects code
-maintainability and system operations.
+Eventual consistency is a more relaxed consistency model which has become
+popular after the publication of the Dynamo paper \cite{DeCandia2007}. Eventual
+consistency guarantees that, once updates cease, all replicas will converge to
+the same value at some moment in the future. As long as updates are occurring,
+replicas may be inconsistent and clients may read stale or divergent values
+depending on which replica processes a given request. From that comes the need
+for the application to implement conflict resolution mechanisms and compensation
+actions to handle the results of actions taken based on inconsistent state. The
+added complexity negatively affects code maintainability and system operations.
 
-Some web applications require strict high availability levels. For example,
+Some web applications strictly require high availability levels. For example,
 Amazon needs its users to be able to add items to their shopping cart even if it
-leads to some error that must be handled later. They claim that the storage
-system backing up their e-commerce offered 99.995\% availability
-\cite{DeCandia2007}.
+leads to some error that must be handled afterwards \cite{DeCandia2007}.
 
-However, eventual consistency is not appropriate for every case, some
-systems need stronger consistency models. An example is a bidding application that cannot allow conflicts on
-bidding history. If eventual consistency is used and a network partition happens, users bidding in the different sides of the partition will result in divergent bidding histories. Furthermore, there are
-applications that do not necessarily need such high levels of availability.
+However, eventual consistency is not appropriate for every case, some systems
+need stronger consistency models. An example is a bidding application that
+cannot allow conflicts on bidding history. If eventual consistency is used and a
+network partition happens, users bidding in the different sides of the partition
+will lead up to divergent bidding histories. Furthermore, developers of
+applications with less strict availability requirements can benefit from simpler
+assumptions when programming.
 
-Per-object timeline consistency is a middle ground between linearizability and eventual consistency. It was developed at Yahoo! and implemented in the PNUTS database system \cite{Cooper2008}. In per-object timeline consistency each stored object has a master replica, which is the only replica that applies updates. This way, updates are serialized, avoiding conflicts among replicas, at the same time achieving better performance than expensive mechanisms such as distributed locking. Since updates are
-asynchronous, stale values due to latency can happen. However, divergences do
-not happen since every replica receive the updates in the same order. Moreover,
-the most recent value is known at any time, it is the value stored in the
-master replica. Objects are versioned and read requests carry the required
-version, which can be the most recent (served exclusively by the master), an specific version or any version. The main drawback of per-record timeline consistency is that both
-updates and most recent reads become unavailable in case of a
-failure preventing the communication between a client and the master.
+Per-object timeline consistency is a middle ground between linearizability
+\cite{Herlihy1990} and eventual consistency. It was first implemented in the
+PNUTS database system, developed by Yahoo! \cite{Cooper2008}. Under this
+consistency model, each object has a master replica, which is the only replica
+allowed to apply updates. By serializing updates in the master replica,
+conflicts among replicas cannot happen since every replica receive the updates
+in the same order. Moreover, the most recent value is known at any time, it is
+the value stored in the master replica. However, since updates are asynchronous,
+stale reads due to latency can happen. Objects are versioned and read requests
+carry the required version, which can be a specific version, the most recent
+(served exclusively by the master) or any version. The main drawback of
+per-record timeline consistency is that updates and most recent reads become
+unavailable in case of a failure preventing the communication between a client
+and the master replica.
 
-Per-object timeline consistency may be a better fit than eventual consistency for web
-applications where users tolerate some level of unavailability. Also,
+Per-object timeline consistency may be a better fit than eventual consistency
+for web applications where users tolerate some level of unavailability. Also,
 besides availability, performance must also be considered. The main performance
-hit in per-record timeline consistency is due to the cost of updates and consistent reads
-when the request must traverse a WAN to get to the master in another data
-center. However, specific conditions may alleviate this issue, such as high
-access locality rates or high read/write ratios. In fact, PNUTS authors observed
-up to 85\% locality rate and 94\% of read/write ratio in a study among Yahoo's
-applications \cite{Cooper2008, Kadambi2011}. Based on that, they implemented
-heuristics that improve per-record timeline consistency performance.
+hit in per-record timeline consistency is due to the cost of updates and
+consistent reads when the request must traverse a WAN to reach the master
+replica in another data center. However, specific conditions may alleviate this
+issue, such as high access locality rates and high read/write ratios. In fact,
+PNUTS authors observed up to 85\% locality rate and 94\% of read/write ratio in
+a study of Yahoo's applications \cite{Cooper2008, Kadambi2011}. Based on that,
+they implemented heuristics that improve per-record timeline consistency
+performance.
 
-This study compared the performance of a geo-replicated storage system using
-eventual consistency and per-record timeline consistency under different workloads and
-network conditions. The results make a useful resource for developers and system
-administrators estimating system development costs and doing capacity planning.
+This study compares the performance of a geo-replicated storage system using
+eventual consistency and per-record timeline consistency under different
+workloads and network conditions. The results make a useful resource for
+developers and system administrators estimating system development costs and
+doing capacity planning.
 
 %% ------------------------------------------------------------------------- %%
 \section{Eventual Consistency and Per-record Timeline Consistency}
